<resources>
    <string name="app_name">MVVM_Firebase_Example</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="email"><![CDATA[Email ->]]></string>
    <string name="name"><![CDATA[Name ->]]></string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email_hint">Email</string>
    <string name="full_name">Full Name</string>
    <string name="title">MVVM_FIREBASE</string>
    <string name="details">Details</string>
</resources>