<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="#FFFFFF"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/acme"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/purple_700"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/et_fullname"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/et_theme_01"
        android:gravity="center"
        android:hint="@string/full_name"
        android:textColorHint="@color/browser_actions_title_color" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/et_theme_01"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/browser_actions_title_color" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/et_theme_01"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/browser_actions_title_color" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/login"
        android:id="@+id/btn_login"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:backgroundTint="#3578DC"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/or"
        android:textColor="@color/black"
        android:textSize="15sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/register"
        android:id="@+id/btn_signup"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:backgroundTint="#3578DC"/>

</LinearLayout>