<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainPageActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tv_fullname"
        android:text="@string/name"
        android:gravity="center"
        android:textSize="20sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/tv_email"
        android:text="@string/email"
        android:gravity="center"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/logout"/>

</LinearLayout>